libtlafmt/tests/snapshots/format__corpus@MCBakery.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCBakery.tla
---
------------------------------- MODULE MCBakery --------------------------------
EXTENDS Bakery
CONSTANT MaxNat
ASSUME MaxNat \in Nat
NatOverride == 0..MaxNat
================================================================================
