libtlafmt/tests/snapshots/format__corpus@MCBoulanger.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCBoulanger.tla
---
------------------------------ MODULE MCBoulanger ------------------------------
EXTENDS Boulanger
CONSTANT MaxNat
ASSUME MaxNat \in Nat
NatOverride == 0..MaxNat
StateConstraint == \A process \in Procs: num[process] < MaxNat
================================================================================
