libtlafmt/tests/snapshots/format__corpus@MCChangRoberts.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCChangRoberts.tla
---
---------------------------- MODULE MCChangRoberts -----------------------------
EXTENDS Naturals
CONSTANT N
VARIABLES msgs, pc, initiator, state
ASSUME N \in Nat
Id == [i \in 1..N |-> i]
INSTANCE ChangRoberts
================================================================================
